# pyamenity

./: README.md  pyproject.toml
pyamenity/: amenitypass.ipynb
pyamenity/services/: amenity.py
