[tool.poetry]
name = "pyamenity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
reorder-python-imports = "^2.4.0"
jupyterlab = "^3.0.9"
mypy = "^0.812"
